# keru

./: .gitignore  Cargo.toml  README.md  justfile  notes_todo.txt
.github/workflows/: docs.yml
change_watcher/: Cargo.toml
change_watcher/src/: lib.rs  traits.rs
crates/blue_paint/: Cargo.toml
crates/blue_paint/src/: canvas.rs  color_picker.rs  main.rs  main_ui.rs
crates/blue_paint/src/shaders/: color_picker.wgsl
crates/change_watcher/src/: lib.rs  tests.rs
crates/keru_macros/: Cargo.toml
crates/keru_macros/src/: lib.rs
crates/node_key_macro/: Cargo.toml
crates/podslab/: Cargo.toml
crates/podslab/src/: lib.rs  tests.rs
crates/view_derive/: Cargo.toml
crates/view_derive/src/: lib.rs
examples/: 01_intro.rs  02_dynamic.rs  03_components.rs  03_fake_components.rs  04_real_components.rs  aesthetic_scifi.rs  aesthetics_modern.rs  aesthetics_neumorphism.rs  aesthetics_scifi.rs  aesthetics_water.rs  airbnb_month_slider.rs  animations.rs  async_button_component.rs  async_thread.rs  banner_with_scheduled_wakeup.rs  counter.rs  counter_small.rs  custom_component_tab_view.rs  custom_navigation.rs  custom_rendering.rs  custom_rendering_shader.wgsl  daw.rs  daw_mixer.rs  direct_winit_wgpu.rs  drag_and_drop_1.rs  drag_and_drop_2.rs  drag_and_drop_3.rs  drag_and_drop_4.rs  drag_and_drop_component.rs  drag_and_drop_manual.rs  elm_architecture.rs  example.rs  funny_animations.rs  funny_animations_2.rs  grid.rs  image_path_test.rs  image_test.rs  interactive_plot.rs  key_scope.rs  loop_control.rs  (+32 more)
examples/assets/: glitch.jpg~
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/blue_paint/: Cargo.toml
examples/blue_paint/src/: canvas.rs  color_picker.rs  color_picker_render.rs  main.rs  main_ui.rs  oklab.rs  paint_ui.rs
examples/blue_paint/src/shaders/: color_picker.wgsl  color_picker_aislop.wgsl
examples/experimental/: different_add_nest_syntax.rs  panes.rs  reactive_old.rs  test.rs
examples/experimental/keru_paint/src/: canvas.rs  color_picker.rs  color_picker_render.rs  main.rs  paint_ui.rs  update_canvas.rs  window.rs
examples/experimental/keru_paint/src/icons/: brush.kra~  brush.png~
examples/experimental/keru_paint/src/shaders/: canvas.wgsl  color_picker.wgsl
examples/experimental/subsecond_example_doesnt_work/: Cargo.toml
examples/experimental/subsecond_example_doesnt_work/src/: main.rs
examples/keru_paint/: Cargo.toml
examples/keru_paint/src/: canvas.rs  color_picker.rs  color_picker_render.rs  main.rs  oklab.rs  paint_ui.rs  update_canvas.rs
examples/keru_paint/src/icons/: brush.kra  eraser.kra
examples/keru_paint/src/shaders/: color_picker.wgsl  shadertoy.glsl
src/: accessibility.rs  add_parent_closure.rs  add_parent_manual.rs  basic_window_loop.rs  box.wgsl  canvas.rs  canvas.wgsl  changes.rs  chatgpt layout pseudocode.py  color.rs  component.rs  component_library.rs  components.rs  example_window_loop.rs  helper.rs  image.wgsl  inner_node.rs  input.rs  interact.rs  keru_accesskit.rs  key_events.rs  key_scope.rs  keys.rs  layout.rs  lib.rs  library.rs  main-im.rs  main-ret.rs  main.rs  main_canvas.rs  main_ui.rs  math.rs  mouse_events.rs  node.rs  node_key.rs  node_library.rs  node_params.rs  nodes.rs  observer.rs  param_library.rs  (+32 more)
src/about/: mod.rs
src/icons/: brush.png~  eraser.png~
src/shaders/: box.wgsl
view_derive/: Cargo.toml
view_derive/src/: lib.rs
