[package]
name = "keru"
description = "Experimental GUI library"
license = "GPL-3.0-only"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/kekelp/keru"
categories = ["gui"]
keywords = ["gui"]

[workspace]
members = [
    "crates/keru_macros",
    # "examples/keru_paint",
]

[profile.dev]
opt-level = 1
debug = 0
strip = "debuginfo"

[dependencies]
keru_macros = { path = "crates/keru_macros" }
winit = { version = "0.30.5", features = ["rwh_05"] }
wgpu = { version = "27", default-features = true }
pollster = "0.3.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
glam = "0.28"
slab = "0.4.9"
log = "0.4.22"
env_logger = "0.11.6"
bitflags = "2.8.0"
ahash = "0.8.11"
keru_draw = { path = "../keru_draw" }
bumpalo = { version = "3.16", features = ["collections"] }
smallvec = "1.15.1"

[lints.clippy]
needless_return = { level = "allow" }
bool_comparison = { level = "allow" }
