[package]
name = "keru"
description = "Experimental GUI library"
license = "GPL-3.0-only"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/kekelp/keru"
categories = ["gui"]
keywords = ["gui"]

[workspace]
members = [
    "crates/keru_macros",
    "examples/subsecond_example_doesnt_work",
    # "examples/keru_paint",
]

[profile.dev]
opt-level = 1
debug = 0
strip = "debuginfo"

[features]
default = []
serde = ["dep:serde", "glam/serde"]

[dependencies]
keru_draw = { git = "https://github.com/kekelp/keru_draw.git" }
keru_macros = { git = "https://github.com/kekelp/keru.git", package = "keru_macros" }
winit = { version = "0.30.5", features = ["rwh_05"] }
wgpu = { version = "27", default-features = true }
pollster = "0.3.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
glam = "0.30"
serde = { version = "1", features = ["derive"], optional = true }
slab = "0.4.9"
log = "0.4.22"
env_logger = "0.11.6"
bitflags = "2.8.0"
ahash = "0.8.11"
bumpalo = { version = "3.16", features = ["collections"] }
smallvec = "1.15.1"
lru = { version = "0.12", default-features = false }

[lints.clippy]
needless_return = { level = "allow" }
bool_comparison = { level = "allow" }
