[package]
name = "blue_paint"
version = "0.1.0"
edition = "2021"

[dependencies]
blue = { path = "../.." }
winit = { version = "0.29.14", features = ["rwh_05"] }
wgpu = { version = "22", default-features = true }
bytemuck = { version = "1.19.0", features = [ "derive" ] }
glam = "0.28.0"
winit_input_helper = "0.16.0"
