[package]
name = "keru_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the `keru` crate"
license = "GPL-3.0-only"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8.5"

[lints.clippy]
needless_return = { level = "allow" } 
bool_comparison = { level = "allow" }
