[package]
name = "view_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["full", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8.5"
const_format = "0.2.32"

[lints.clippy]
needless_return = { level = "allow" } 
bool_comparison = { level = "allow" }
