[package]
name = "keru_paint"
version = "0.1.0"
edition = "2021"

[dependencies]
keru = { path = "../.." }
winit = { version = "0.30.5", features = ["rwh_05"] }
wgpu = { version = "23", default-features = true }
bytemuck = { version = "1.19.0", features = [ "derive" ] }
glam = "0.28.0"
winit_input_helper = "0.16.0"
