[package]
name = "keru_paint"
version = "0.1.0"
edition = "2021"

[dependencies]
keru = { path = "../.." }
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = { version = "23", default-features = true }
bytemuck = { version = "1.19.0", features = [ "derive" ] }
glam = "0.28.0"
env_logger = "0.11.6"
log = "0.4.22"
